Added komga read progress import!

--- a/config.ini
+++ b/config.ini
@@ -12,3 +12,10 @@ chunk_size = 10000
 [comicVine]
 cv_api_key = '[COMICVINE API KEY]'
 
+[komga]
+## leave as default values for no komga integration ##
+komgauser = '[KOMGA USER NAME]'
+komgapass = '[KOMGA PASSWORD]'
+## format = format= http://servername:port/
+komgabaseurl = '[KOMGA URL]'
+
