config.ini update

--- a/config.ini
+++ b/config.ini
@@ -1,21 +1,21 @@
 [mylar]
-mylarapi = '[MYLAR API KEY]'
+mylarapi = [MYLAR API KEY]
 ## format = format= http://servername:port/
-mylarbaseurl = '[MYLAR URL]'
+mylarbaseurl = [MYLAR URL]
 
 [leagueOfComicGeeks]
 ## only required for wishlist syncing ##
-leagueusername = '[leagueofcomicgeeks.com username]'
+leagueusername = [leagueofcomicgeeks.com username]
 ## max number of lines for csv import files ##
 chunk_size = 10000
 
 [comicVine]
-cv_api_key = '[COMICVINE API KEY]'
+cv_api_key = [COMICVINE API KEY]
 
 [komga]
 ## leave as default values for no komga integration ##
-komgauser = '[KOMGA USER NAME]'
-komgapass = '[KOMGA PASSWORD]'
+komgauser = [KOMGA USER NAME]
+komgapass = [KOMGA PASSWORD]
 ## format = format= http://servername:port/
-komgabaseurl = '[KOMGA URL]'
+komgabaseurl = [KOMGA URL]
 
