Moved pubids to config.ini and added more publisher examples in new txt.

--- a/config.ini
+++ b/config.ini
@@ -19,3 +19,6 @@ komgapass = [KOMGA PASSWORD]
 ## format = format= http://servername:port/
 komgabaseurl = [KOMGA URL]
 
+[yearinreview]
+##PubIDs found in pubids.txt for those tested so far, non-majors will have missing covers
+pubidsetting= 31,10
