More pubIDs/clarify instruction in config.ini
Added a few dozen new publishers to help end users not have to research the IDs they need. Also clarified my note in the config.ini to avoid any confusion about how to separate values.

--- a/config.ini
+++ b/config.ini
@@ -20,5 +20,5 @@ komgapass = [KOMGA PASSWORD]
 komgabaseurl = [KOMGA URL]
 
 [yearinreview]
-##PubIDs found in pubids.txt for those tested so far, non-majors will have missing covers
+##PubIDs found in pubids.txt for those tested so far, non-majors will have missing covers. Separate values by comma.
 pubidsetting= 31,10
