--- a/config.ini
+++ b/config.ini
@@ -1,24 +1,22 @@
 [mylar]
 mylarapi = [MYLAR API KEY]
-## format = format= http://servername:port/
 mylarbaseurl = [MYLAR URL]
 
 [leagueOfComicGeeks]
-## only required for wishlist syncing ##
 leagueusername = [leagueofcomicgeeks.com username]
-## max number of lines for csv import files ##
 chunk_size = 10000
 
 [comicVine]
 cv_api_key = [COMICVINE API KEY]
 
 [komga]
-## leave as default values for no komga integration ##
 komgauser = [KOMGA USER NAME]
 komgapass = [KOMGA PASSWORD]
-## format = format= http://servername:port/
 komgabaseurl = [KOMGA URL]
 
 [yearinreview]
-##PubIDs found in pubids.txt for those tested so far, non-majors will have missing covers. Separate values by comma.
-pubidsetting= 31,10
+pubidsetting = 10,31
+startyear = 1930
+endyear = 2025
+#book types available One-Shot, Print, None, Reprint, HC, TPB, Digital, GN
+booktypes = One-Shot,Print,None,Digital,GN
