--- a/config.ini
+++ b/config.ini
@@ -1,17 +1,22 @@
 [mylar]
 mylarapi = [MYLAR API KEY]
+## format = format= http://servername:port/
 mylarbaseurl = [MYLAR URL]
 
 [leagueOfComicGeeks]
+## only required for wishlist syncing ##
 leagueusername = [leagueofcomicgeeks.com username]
+## max number of lines for csv import files ##
 chunk_size = 10000
 
 [comicVine]
 cv_api_key = [COMICVINE API KEY]
 
 [komga]
+## leave as default values for no komga integration ##
 komgauser = [KOMGA USER NAME]
 komgapass = [KOMGA PASSWORD]
+## format = format= http://servername:port/
 komgabaseurl = [KOMGA URL]
 
 [yearinreview]
