Add mylar.db to config declarations
Used in mylarpubtoconfig.py

--- a/config.ini
+++ b/config.ini
@@ -2,6 +2,7 @@
 mylarapi = [MYLAR API KEY]
 ## format = format= http://servername:port/
 mylarbaseurl = [MYLAR URL]
+mylardb = /path/to/mylar.db
 
 [leagueOfComicGeeks]
 ## only required for wishlist syncing ##
