--- a/config.ini
+++ b/config.ini
@@ -26,3 +26,9 @@ startyear = 1930
 endyear = 2025
 #book types available One-Shot, Print, None, Reprint, HC, TPB, Digital, GN
 booktypes = One-Shot,Print,None,Digital,GN
+
+[cblimportquick]
+# For mylarCBLimportQuick.py script there is an option to analyze issues. 
+# The default expectation is that you automatically monitor all issues for an added series.
+# If you would rather only add the issues in the CBL file as wanted, then set  to True.
+analyzeIsues = False
