--- a/config.ini
+++ b/config.ini
@@ -21,6 +21,12 @@ komgapass = [KOMGA PASSWORD]
 komgabaseurl = [KOMGA URL]
 
 [yearinreview]
+# See superpubids.txt for list of many more publishers
+# Examples:
+# DC, Marvel:
+# pubidsetting = 10,31
+# Image, Dark Horse, IDW, Boom!
+# pubidsetting = 513,364,1190,1868
 pubidsetting = 10,31
 startyear = 1930
 endyear = 2025
